examples/test/testpolicy3250.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3250
  namespace: namespace78
spec:
  podSelector:
    matchLabels:
      key15: value36
      key12: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value37
          key15: value9
          key49: value48
      podSelector:
        matchLabels:
          key6: value32
          key33: value15
          key10: value21
